@@ -1,3 +1,10 @@
+2015-02-04  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>
+
+	* mime-edit.el (mime-edit-make-encrypt-recipient-header): Returns
+	cons of recipients list and header string.  Pick recipients more
+	strictly.
+	(mime-edit-encrypt-pgp-mime, mime-edit-encrypt-smime): Adjusted.
+
 2014-11-09  Erik Hetzner <egh@e6h.org>
 
 	* semi-pkg.el: New file.
